# ydb-cpp-sdk

./: CHANGELOG.md  CMakeLists.txt
.github/: last_commit.txt
cmake/: external_libs.cmake
examples/: CMakeLists.txt
examples/otel_tracing/: CMakeLists.txt  README.md  docker-compose.yml  main.cpp
examples/otel_tracing/grafana/dashboards/: ydb-query-service.json
include/ydb-cpp-sdk/client/driver/: driver.h
include/ydb-cpp-sdk/client/import/: import.h
include/ydb-cpp-sdk/client/metrics/: metrics.h
include/ydb-cpp-sdk/client/table/: table.h
include/ydb-cpp-sdk/client/topic/: write_session.h
include/ydb-cpp-sdk/client/trace/: trace.h
include/ydb-cpp-sdk/client/types/: ydb.h
include/ydb-cpp-sdk/open_telemetry/: metrics.h  trace.h
open_telemetry/: CMakeLists.txt
open_telemetry/include/ydb-cpp-sdk/open_telemetry/: extension.h
plugins/: CMakeLists.txt
plugins/metrics/: CMakeLists.txt
plugins/metrics/otel/: CMakeLists.txt  metrics.cpp
plugins/metrics/otel/include/ydb-cpp-sdk/open_telemetry/: metrics.h
plugins/metrics/otel/src/: metrics.cpp
plugins/open_telemetry/: CMakeLists.txt
plugins/open_telemetry/include/ydb-cpp-sdk/open_telemetry/: extension.h  metrics.h  trace.h
plugins/open_telemetry/src/: metrics.cpp  trace.cpp
plugins/trace/: CMakeLists.txt
plugins/trace/otel/: CMakeLists.txt
plugins/trace/otel/src/: trace.cpp
src/: CMakeLists.txt
src/api/protos/: ydb_table.proto
src/client/: CMakeLists.txt
src/client/common_client/impl/: client.h
src/client/driver/: driver.cpp
src/client/impl/: CMakeLists.txt
src/client/impl/internal/common/: client_pid.cpp  ydb_client_api.h
src/client/impl/internal/db_driver_state/: state.cpp
src/client/impl/internal/grpc_connections/: grpc_connections.cpp  grpc_connections.h  params.h
src/client/impl/internal/internal_client/: client.h
src/client/impl/internal/retry/: retry.cpp  retry.h  retry_async.h  retry_sync.h
src/client/impl/observability/: CMakeLists.txt  client_metrics.cpp  client_metrics.h  metrics.cpp  metrics.h  observation.cpp  observation.h  operation_metrics.cpp  operation_metrics.h  operation_name.h  operation_span.cpp  operation_span.h  span.cpp  span.h
src/client/impl/observability/error_category/: CMakeLists.txt
src/client/impl/session/: session_pool.cpp  session_pool.h
src/client/impl/stats/: CMakeLists.txt  stats.h
src/client/import/: import.cpp
src/client/metrics/: CMakeLists.txt  metrics.cpp
src/client/query/: CMakeLists.txt  client.cpp
src/client/query/impl/: CMakeLists.txt  query_metrics.cpp  query_metrics.h  query_spans.cpp  query_spans.h
src/client/table/: table.cpp
src/client/table/impl/: CMakeLists.txt  table_client.cpp  table_client.h  table_metrics.h  table_spans.cpp  table_spans.h
src/client/topic/impl/: write_session.cpp
src/client/topic/ut/: topic_tx_skip_conflict_ut.cpp
src/client/trace/: CMakeLists.txt  trace.cpp
src/open_telemetry/: CMakeLists.txt  otel.cpp
tests/common/: fake_metric_registry.h  fake_trace_provider.h
tests/integration/: CMakeLists.txt
tests/integration/metrics/: CMakeLists.txt  main.cpp
tests/unit/client/: CMakeLists.txt
tests/unit/client/build_info/: build_info_ut.cpp
tests/unit/client/observability/: client_metrics_ut.cpp  metrics_ut.cpp  operation_metrics_ut.cpp  spans_ut.cpp
tests/unit/client/query/: query_metrics_ut.cpp  query_spans_ut.cpp
tests/unit/client/table/: table_spans_ut.cpp
(+1 files in other folders)
